# flippitydigits

./: .gitignore  LICENSE.md  README.md  devsrv.py  flippity.cpp  makefile
multiplables/: CMakeLists.txt  README.md  main.cc  makefile
multiplables/sounds/: 202498__xtrsounder__small-crowd-cheering-and-clapping-at-party-2.h  242501__gabrielaraujo__powerup-success.cc  253886__themusicalnomad__negative-beeps.cc
static/css/: flippity.css
web/: .gitignore  devsrv.py  flippity.less  flippity.styl  flippity.ts  index.html  makefile  package.json
web/src/: flippity.js
web/static/css/: flippity.css
web/static/js/: flippity.js
